 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

Pig Change Log

Trunk (unreleased changes)

INCOMPATIBLE CHANGES

PIG-3191: [piggybank] MultiStorage output filenames are not sortable (Danny Antonelli via jcoveney)

PIG-3174:  Remove rpm and deb artifacts from build.xml (gates)

IMPROVEMENTS

PIG-3269: In operator support (cheolsoo)

PIG-200: Pig Performance Benchmarks (daijy)

PIG-3261: User set PIG_CLASSPATH entries must be prepended to the CLASSPATH, not 
appended (qwertymaniac via daijy)

PIG-3141: Giving CSVExcelStorage an option to handle header rows (jpacker via cheolsoo)

PIG-3217: Add support for DateTime type in Groovy UDFs (herberts via daijy)

PIG-3218: Add support for biginteger/bigdecimal type in Groovy UDFs (herberts via daijy)

PIG-3248: Upgrade hadoop-2.0.0-alpha to hadoop-2.0.3-alpha (daijy)

PIG-3235: Add log4j.properties for unit tests (cheolsoo)

PIG-3236: parametrize snapshot and staging repo id (gkesavan via daijy)

PIG-3244: Make PIG_HOME configurable (robert.schooley@gmail.com via daijy)

PIG-3233: Deploy a Piggybank Jar (njw45 via cheolsoo)

PIG-3245: Documentation about HBaseStorage (Daisuke Kobayashi via cheolsoo)

PIG-3211: Allow default Load/Store funcs to be configurable (prkommireddi via cheolsoo)

PIG-3136: Introduce a syntax making declared aliases optional (jcoveney via cheolsoo)

PIG-3142: [piggybank] Fixed-width load and store functions for the Piggybank (jpacker via cheolsoo)

PIG-3162: PigTest.assertOutput doesn't allow non-default delimiter (dreambird via cheolsoo)

PIG-3002: Pig client should handle CountersExceededException (jarcec via billgraham)

PIG-3189: Remove ivy/pig.pom and improve build mvn targets (billgraham)

PIG-3192: Better call to action to download Pig in docs (rjurney via jcoveney)

PIG-3167: Job stats are printed incorrectly for map-only jobs (Mark Wagner via jcoveney)

PIG-3131: Document PluckTuple UDF (rjurney via jcoveney) 
